--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -21,12 +21,12 @@ import WorldIcon from "./svg/world.svg.astro";
   </div>
 </div>
 
-<style lang="scss">
+<style>
 .footer-inner {
   display: flex;
   justify-content: space-between;
   align-items: end;
-  padding: 1rem;
+  padding: var(--size-fluid-1);
   border-top: 1px solid var(--text-1);
 }
 
@@ -34,17 +34,18 @@ import WorldIcon from "./svg/world.svg.astro";
 .offline {
   display: grid;
   grid-template-columns: max-content max-content;
+  line-height: var(--font-lineheight-3);
 
-  svg {
-    height: 32px;
-    width: 32px;
+  & svg {
+    height: 26px;
+    width: 26px;
   }
 
-  :first-child {
-    // this is the icon, spans two rows
-    // the next one or two els are in second row
+  & :first-child {
+    /* this is the icon, spans two rows
+    the next one or two els are in second row */
     grid-row: 1 / 3;
-    padding-right: 0.5rem;
+    padding-right: var(--size-2);
   }
 }
 
