--- a/src/components/svg/sleep.svg.astro
+++ b/src/components/svg/sleep.svg.astro
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<style>
+  svg {
+    fill: var(--text-1);
+  }
+</style>
+
 <svg
   xmlns="http://www.w3.org/2000/svg"
+  id="sleep"
   x="0px"
   y="0px"
   width="32px"
