--- a/src/pages/apropos.astro
+++ b/src/pages/apropos.astro
@@ -25,6 +25,7 @@ let permalink = 'https://ruechappe.fr/apropos';
   </PanelPageTitle>
   <Panel position="stretch" title="apropos">
     <div slot="content">
+    <!-- TODO: Put a shape on mugshot -->
       <Mugshot img='atable300.png'/>
       <Markdown>
 
@@ -49,8 +50,8 @@ let permalink = 'https://ruechappe.fr/apropos';
 
 </Html>
 
-<style lang="scss">
+<style>
 body {
-  background-color: var(--color-fancy-bg);
+  background-color: var(--surface-1);
 }
 </style>
