--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,91 +2,11 @@
 
 @import "open-props/style";
 @import "o6/colors.css";
+@import "o6/theme-light.css";
+@import "o6/theme-dark.css";
+@import "o6/typography.css";
 
 /* @import "open-props/normalize"; */
-
-@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Piazzolla:wght@400;700;900&display=swap");
-
-:root {
-  --font-sans: bitter, system-ui, sans-serif;
-  --font-cursive: piazzolla, cursive;
-  --vw12: 8.333vw; /* 8.33vw is 1/12 de 100vw, bcz of 12 cols grid */
-  --text-1: var(--gray-9);
-}
-
-body {
-  font-size: 18px;
-  font-family: var(--font-sans);
-  font-weight: var(--font-weight-4);
-  line-height: var(--font-lineheight-2);
-}
-
-[data-theme="light"] {
-  color-scheme: light;
-
-  --brand: var(--orange-6);
-
-  --link: var(--indigo-7);
-  --link-visited: var(--grape-7);
-
-  --surface-1: var(--yellow-2);
-  --surface-2: var(--o6gray-2);
-  --surface-3: var(--gray-3);
-  --surface-4: var(--gray-4);
-
-  --nav-icon: var(--yellow-5);
-  --nav-icon-hover: var(--yellow-6);
-
-  --shadow-color: 220 3% 15%;
-  --shadow-strength: 1%;
-
-  & .panel {
-    --text-1: var(--gray-9);
-    --text-2: var(--gray-7);
-  }
-}
-
-[data-theme="dark"] {
-  color-scheme: dark;
-
-  --brand: var(--orange-4);
-
-  --link: var(--indigo-3);
-  --link-visited: var(--grape-3);
-
-  --surface-1: var(--yellow-4);
-  --surface-2: var(--gray-8);
-  --surface-3: var(--gray-7);
-  --surface-4: var(--gray-6);
-
-  --nav-icon: var(--gray-6);
-  --nav-icon-hover: var(--gray-7);
-
-  --shadow-strength: 10%;
-  --shadow-color: 220 40% 2%;
-
-  & .panel {
-    --text-1: var(--gray-1);
-    --text-2: var(--gray-2);
-  }
-}
-
-.teasing {
-  font-weight: var(--font-weight-2);
-  font-size: var(--font-size-fluid-1);
-  line-height: var(--font-lineheight-2);
-}
-
-.logo {
-  font-family: Piazzolla, serif;
-  font-weight: var(--font-weight-9);
-  letter-spacing: var(--font-letterspacing-2);
-  color: var(--brand);
-}
-
-.article {
-  font-weight: var(--font-weight-3);
-}
 
 .stacked {
   display: grid;
