--- a/src/styles/o6/typography.css
+++ b/src/styles/o6/typography.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Piazzolla:wght@400;700;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Piazzolla:wght@400..900&display=swap"); */
 
 :root {
   --font-sans: bitter, system-ui, sans-serif;
@@ -8,16 +8,36 @@
 }
 
 body {
-  font-size: 18px;
   font-family: var(--font-sans);
-  font-weight: var(--font-weight-4);
   line-height: var(--font-lineheight-2);
+  font-size: 18px;
+  font-weight: var(--font-weight-4);
+}
+
+h1 {
+  font-size: var(--font-size-fluid-3);
+  font-weight: var(--font-weight-9);
+}
+
+h2 {
+  font-size: var(--font-size-fluid-2);
+  font-weight: var(--font-weight-3);
+}
+
+h3 {
+  font-size: var(--font-size-fluid-1);
+  font-weight: var(--font-weight-3);
+}
+
+h4 {
+  font-size: var(--font-size-1);
+  font-weight: var(--font-weight-5);
 }
 
 .teasing {
-  font-weight: var(--font-weight-2);
-  font-size: var(--font-size-fluid-1);
   line-height: var(--font-lineheight-2);
+  font-size: var(--font-size-fluid-1);
+  font-weight: var(--font-weight-2);
 }
 
 .logo {
@@ -29,4 +49,5 @@ body {
 
 .article {
   font-weight: var(--font-weight-3);
+  font-size: var(--font-size-2);
 }
