--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -11,13 +11,13 @@ import WorldIcon from "./svg/world.svg.astro";
     </div>
     <div class="online">
     <WorldIcon />
-    <p>olivier@ruechappe.fr</p>
+    <a href='mailto:\u006f\u006c\u0069\u0076\u0069\u0065\u0072\u0040\u0072\u0075\u0065\u0063\u0068\u0061\u0070\u0070\u0065\u002e\u0066\u0072'>olivier@ruechappe.fr</a>
     </div>
 
   </div>
 
   <div class="footer-right logo">
-    <p>ruechappe.fr</p>
+    <p class="text-logo">ruechappe.fr</p>
   </div>
 </div>
 
@@ -49,7 +49,7 @@ import WorldIcon from "./svg/world.svg.astro";
   }
 }
 
-.logo {
+.text-logo {
   font-size: 18px;
 }
 </style>
