--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -38,7 +38,8 @@ import ThemeToggle from "./ThemeToggle.astro";
     display: flex;
     gap: var(--size-fluid-1);
     line-height: 1.1;
-    align-self: baseline;
+    align-items: center;
+    padding: 0;
   }
 
   .logo {
