--- a/src/components/PanelFull.astro
+++ b/src/components/PanelFull.astro
@@ -2,7 +2,7 @@
 const { position = "left", title = null } = Astro.props
 
 ---
-<article id={ title } class="full">
+<article id={ title } class="full panel">
 <div class="content">
   <slot name="content"/>
 </div>
