--- a/src/pages/apropos.astro
+++ b/src/pages/apropos.astro
@@ -23,7 +23,7 @@ let permalink = 'https://ruechappe.fr/apropos';
   <PanelPageTitle position="center">
     <div class="title-item"><h1>à PROPOS</h1></div>
   </PanelPageTitle>
-  <Panel position="stretch" title="apropos">
+  <Panel position="stretch panel" title="apropos">
     <div slot="content">
     <!-- TODO: Put a shape on mugshot -->
       <Mugshot img='atable300.png'/>
