--- a/src/components/svg/home.svg.astro
+++ b/src/components/svg/home.svg.astro
@@ -1,10 +1,17 @@
-<style>
+---
+const { size = "32px" } = Astro.props;
+---
+
+<style define:vars={{size}}>
   svg {
-    fill: var(--text-1);
+    fill: var(--brand);
+    width: var(--size);
+    height: var(--size);
   }
 </style>
 
 <svg
+  class="visible"
   xmlns="http://www.w3.org/2000/svg"
   x="0px"
   y="0px"
