--- a/src/components/svg/world.svg.astro
+++ b/src/components/svg/world.svg.astro
@@ -1,6 +1,11 @@
-<style>
+---
+const { size = "32px" } = Astro.props;
+---
+<style define:vars={{size}}>
   svg {
-    fill: var(--text-1);
+    fill: var(--brand);
+    width: var(--size);
+    height: var(--size);
   }
 </style>
 
