refactor: index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,11 +22,11 @@ let permalink = "https://ruechappe.fr/";
     </header>
 
     <PanelTitle>
-      <h1>olivier&nbsp;cardinaux</h1>
-      <h3>Fabricant de sites internet personnalisés</h3>
+      <h1>Conception et fabrication de sites internet personnalisés à Montmartre</h1>
+      <h3>olivier&nbsp;cardinaux</h3>
     </PanelTitle>
 
-    <Panel position="right" title="intro">
+    <Panel position="right panel" title="intro">
       <div slot="content">
         <p class="teasing">
           Les projets (numériques) prennent
@@ -37,18 +37,18 @@ let permalink = "https://ruechappe.fr/";
       </div>
     </Panel>
 
-    <Panel>
+    <Panel position="left panel">
       <div slot="content">
         <Markdown>
           ### Outils
 
           Vous aider et vous donner la possibilité de prendre soin de votre site.
 
-          Je conçois en gardant à l’esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
+          Je conçois en gardant à l'&#x2019;esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
 
           Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
 
-          <Button theme="panel">Oh ouiii, je le veux ! &rarr;</Button>
+          <Button theme="panel">Oh ouiii, je le veux ! &rarr; &#x21e2; &#x27f6;</Button>
           <Button>Button naked</Button>
         </Markdown>
       </div>
@@ -57,7 +57,7 @@ let permalink = "https://ruechappe.fr/";
     <PanelFull title="points">
       <div slot="content">
         <Markdown>
-          Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+          Il s'agit de s&#x2019;adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
         </Markdown>
       </div>
       <div slot="content">
@@ -72,7 +72,7 @@ let permalink = "https://ruechappe.fr/";
       </div>
     </PanelFull>
 
-    <Panel position="center columns">
+    <Panel position="center columns panel">
       <div slot="content">
         <Markdown>
           Les projets prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
