--- a/src/styles/o6/typography.css
+++ b/src/styles/o6/typography.css
@@ -40,7 +40,7 @@ h4 {
   font-weight: var(--font-weight-2);
 }
 
-.logo {
+.text-logo {
   font-family: Piazzolla, serif;
   font-weight: var(--font-weight-9);
   letter-spacing: var(--font-letterspacing-2);
