--- a/src/components/Panel.astro
+++ b/src/components/Panel.astro
@@ -16,9 +16,17 @@ article {
   background-color: var(--surface-2);
   color: var(--text-1);
   font-weight: var(--font-weight-3);
+  font-size: var(--font-size-3);
 }
 
 .content {
+  display: grid;
+  grid-template-columns: 1fr minmax(33vw, 55ch) 5fr;
+
+  & > :global(*) {
+    grid-column: 2;
+  }
+
   padding: 1em;
 }
 
