--- a/src/components/PanelTitle.astro
+++ b/src/components/PanelTitle.astro
@@ -19,13 +19,20 @@ const setClass = position;
     & > :global(h1) {
       color: var(--surface-1);
       font-size: var(--font-size-fluid-3);
-      letter-spacing: var(--font-letterspacing-3);
+      letter-spacing: var(--font-letterspacing-1);
       text-shadow:
-        1px 1px 0 var(--text-1),
-        -1px -1px 0 var(--text-1),
-        1px -1px 0 var(--text-1),
-        -1px 1px 0 var(--text-1),
-        1px 1px 0 var(--text-1);
+        0.02em 0.02em 0 var(--text-1),
+        -0.02em -0.02em 0 var(--text-1),
+        -0.02em 0.02em 0 var(--text-1),
+        0.02em -0.02em 0 var(--text-1),
+        0 0.02em 0 var(--text-1),
+        0 -0.02em 0 var(--text-1),
+        -0.02em 0 0 var(--text-1),
+        0.02em 0 0 var(--text-1);
+    }
+
+    & > :global(h3) {
+      max-width: 66.66%;
     }
   }
 
