fix: back to scss

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -5,7 +5,7 @@ let { type = 'button', theme } = Astro.props;
   <slot />
 </button>
 
-<style>
+<style lang="scss">
 button {
   --button-radius: var(--radius-round);
   --button-text-color: var(--text-1);
