--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -21,7 +21,7 @@ import WorldIcon from "./svg/world.svg.astro";
   </div>
 </div>
 
-<style>
+<style lang="scss">
 .footer-inner {
   display: flex;
   justify-content: space-between;
