--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -21,11 +21,11 @@ import ThemeToggle from "./ThemeToggle.astro";
         </li>
       </ul>
     </nav>
-    <ThemeToggle client:idle />
+    <ThemeToggle />
   </div>
 </div>
 
-<style>
+<style lang="scss">
   .header-inner {
     display: flex;
     justify-content: space-between;
