--- a/src/components/HeaderLogo.astro
+++ b/src/components/HeaderLogo.astro
@@ -4,95 +4,104 @@ import WorldIcon from "./svg/world.svg.astro";
 ---
 
 <div class="brand">
-  <div class="icon stacked js-brand-switch">
-    <span class="visible">
-      <HomeIcon size="48px"/>
-    </span>
-    <span>
-      <WorldIcon size="48px"/>
-    </span>
-  </div>
-  <div class="brand-name text-logo">olivier cardinaux</div>
-    <div class="brand-sub stacked">
-      <div class="text-logo visible">www.ruechappe.fr</div>
-      <div class="text-logo">4 rue Chappe, Paris 18e</div>
+  <a href="/" class="brand-icon">
+    <div class="stacked">
+      <span class="visible">
+        <WorldIcon size="48px" />
+      </span>
+      <span>
+        <HomeIcon size="48px" />
+      </span>
     </div>
+  </a>
+  <div class="brand-name text-logo">olivier cardinaux</div>
+  <div class="brand-sub stacked">
+    <div class="text-logo visible">www.ruechappe.fr</div>
+    <div class="text-logo">4 rue Chappe, Paris 18e</div>
   </div>
 </div>
 
-<style>
-.brand {
-  display: grid;
-  grid-template-columns: max-content 1fr;
-  flex-direction: row;
-  width: max-content;
-
-  & > [class^="brand-"] {
-    grid-column: 2;
-  }
-
-  & > .icon {
-    grid-row: 1 / span 2;
-    align-self: center;
-    width: 48px;
-    height: 48px;
-
-    & > span {
-      opacity: 0;
-    }
-  }
-}
-
-.brand-name {
-  font-size: 4.5vw;
-  height: 0.72em;
-  align-self: end;
-  padding: 0 0.1em;
-}
-
-.brand-sub {
-  border-top: 2px solid var(--brand);
-  background-color: var(--surface-1);
-  padding: 0 0.2em;
-  height: 3rem;
-
-  & :nth-child(1) {
-    opacity: 0;
-
-    &.visible {
-      opacity: 1;
-    }
-
-    color: blue;
-  }
-
-  & :nth-child(2) {
-    opacity: 0;
-
-    &.visible {
-      opacity: 1;
-    }
-
-    color: green;
-  }
-}
-
-span.visible {
-  opacity: 1 !important;
-}
-</style>
-
 <script>
-const toggleLogo = document.querySelector(".js-brand-switch");
-const toggleLogoItems = toggleLogo.querySelectorAll("span");
-const brandLogoItems = document.querySelector(".brand-sub").querySelectorAll("div");
+  const brandLogo = document.querySelector(".brand-sub");
+  const brandItems = document.querySelectorAll(".brand-sub > div, .brand-icon > div > span");
+  let hoverTimeout = null;
 
-toggleLogo.addEventListener("click", e => {
-    brandLogoItems.forEach(i => {
-      i.classList.toggle("visible");
-    });
-    toggleLogoItems.forEach(i => {
-      i.classList.toggle("visible");
-    })
+brandLogo.addEventListener("mouseenter", (e) => {
+    hoverTimeout = setTimeout(
+      () => brandItems.forEach((i) => {
+        i.classList.toggle("visible");
+      }),
+      500
+    );
+    console.log("over " + hoverTimeout);
+  });
+
+brandLogo.addEventListener("click", (e) => {
+      brandItems.forEach((i) => {
+        i.classList.toggle("visible");
+      });
+    console.log("click " + hoverTimeout);
+  });
+
+  brandLogo.addEventListener("mouseleave", (e) => {
+    clearTimeout(hoverTimeout);
+    console.log("out " + hoverTimeout);
   });
 </script>
+
+<style lang="scss">
+  .brand {
+    display: grid;
+    grid-template-columns: max-content 1fr;
+    flex-direction: row;
+    width: max-content;
+
+    & > .brand-sub,
+    & > .brand-name {
+      grid-column: 2;
+    }
+
+    & > .brand-icon {
+      grid-row: 1 / span 2;
+      align-self: center;
+      width: 48px;
+      height: 48px;
+
+      & > div > span {
+        opacity: 0;
+        transition: opacity 0.5s var(--ease-in-3);
+      }
+    }
+  }
+
+  .brand-name {
+    font-size: 4.5vw;
+    height: 0.72em;
+    align-self: end;
+    padding: 0 0.1em;
+  }
+
+  .brand-sub {
+    border-top: 2px solid var(--brand);
+    background-color: var(--surface-1);
+    padding: 0 0.2em;
+    height: 3rem;
+
+    & > * {
+      animation:
+        var(--animation-slide-out-right) forwards,
+        var(--animation-fade-out) forwards;
+      animation-duration: 1s;
+      color: blue;
+
+      &.visible {
+        animation: var(--animation-slide-in-right) forwards;
+        opacity: 1;
+      }
+    }
+  }
+
+  span.visible {
+    opacity: 1 !important;
+  }
+</style>
