--- a/src/components/Panel.astro
+++ b/src/components/Panel.astro
@@ -9,7 +9,7 @@ const { position = "left", title = null } = Astro.props
   </div>
 </article>
 
-<style>
+<style lang="scss">
 article {
   border: 1px solid var(--text-1);
   border-radius: var(--radius-2);
