--- a/src/components/PanelFull.astro
+++ b/src/components/PanelFull.astro
@@ -8,7 +8,7 @@ const { position = "left", title = null } = Astro.props
 </div>
 </article>
 
-<style>
+<style lang="scss">
 .content {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25ch, 1fr));
