--- a/src/components/PanelPageTitle.astro
+++ b/src/components/PanelPageTitle.astro
@@ -6,7 +6,7 @@ const setClass = position
   <slot />
 </div>
 
-<style>
+<style lang="scss">
 #title {
   position: relative;
   justify-self: stretch;
