--- a/src/components/PanelTitle.astro
+++ b/src/components/PanelTitle.astro
@@ -7,7 +7,7 @@ const setClass = position;
   <slot />
 </div>
 
-<style>
+<style lang="scss">
   #title {
     justify-self: start;
     display: flex;
