--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -3,7 +3,7 @@ import RiseIcon from "./svg/rise.svg.astro";
 import SleepIcon from "./svg/sleep.svg.astro";
 ---
 
-<style>
+<style lang="scss">
   .theme-toggle-container {
     transition: transform 0.25s cubic-bezier(0, 1.5, 0.8, 1.2);
 
@@ -33,39 +33,6 @@ import SleepIcon from "./svg/sleep.svg.astro";
     border: none;
   }
 
-  #moon,
-  #sun {
-    fill: var(--nav-icon);
-    stroke: none;
-
-    @nest :hover > svg > & {
-      fill: var(--nav-icon-hover);
-    }
-  }
-
-  #sun {
-    transition: transform 0.5s var(--ease-4);
-    transform-origin: center center;
-  }
-
-  #sun-beams {
-    --_opacity-dur: 0.15s;
-
-    stroke: var(--nav-icon);
-    stroke-width: 2px;
-    transform-origin: center center;
-    transition:
-      transform 0.5s var(--ease-elastic-4),
-      opacity var(--_opacity-dur) var(--ease-4);
-
-    @nest :hover > svg > & {
-      stroke: var(--nav-icon-hover);
-    }
-  }
-
-  #moon > circle {
-    transition: transform 0.5s var(--ease-out-3);
-  }
 </style>
 
 <style global>
@@ -101,3 +68,69 @@ import SleepIcon from "./svg/sleep.svg.astro";
     <SleepIcon />
   </button>
 </div>
+
+<script hoist>
+/*
+ * Copyright 2021 Google LLC
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     https: *www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+// const getColorPreference = () => {
+//   if (localStorage.getItem('theme-preference'))
+//     return localStorage.getItem('theme-preference')
+//   else
+//     return window.matchMedia('(prefers-color-scheme: dark)').matches
+//       ? 'dark'
+//       : 'light'
+// }
+
+// const setPreference = () => {
+//   localStorage.setItem('theme-preference', theme.value)
+//   reflectPreference()
+// }
+
+// const reflectPreference = () => {
+//   document.firstElementChild.setAttribute('data-theme', theme.value)
+//   document.querySelector('#theme-toggle')?.setAttribute('aria-live', theme.value)
+// }
+
+// const theme = {
+//   value: getColorPreference(),
+// }
+
+// // set early so no page flashes
+// reflectPreference()
+
+// window.onload = () => {
+//   // set on load so screen readers can see latest value on the button
+//   reflectPreference()
+
+//   document.querySelector('#theme-toggle').addEventListener('click', e => {
+//     console.log("fuck");
+//     theme.value = theme.value === 'light'
+//       ? 'dark'
+//       : 'light'
+
+//     setPreference()
+//   })
+// }
+
+// window
+//   .matchMedia('(prefers-color-scheme: dark)')
+//   .addEventListener('change', ({matches:isDark}) => {
+//     theme.value = isDark ? 'dark' : 'light'
+//     setPreference()
+//   })
+
+</script>
