--- a/src/styles/o6/_colors.scss
+++ b/src/styles/o6/_colors.scss
@@ -1,29 +1,22 @@
-@mixin light-colors {
-  --text-1: var(--text-1-black);
-  --text-1-bg: var(--color-bg-white);
-  --color-fancy-bg: rgb(254 252 113);
-  --color-fancy-bg-darker: rgba(254 252 113 / 20%);
-}
-
-@mixin dark-colors {
-  --text-1: var(--text-1-white);
-  --text-1-bg: var(--color-bg-black);
-  --color-fancy-bg: rgba(254 252 113 / 50%);
-}
-
-body {
-  --text-1-black: #1f2937;
-  --text-1-white: #f3f4f6;
-  --color-bg-black: #1f2937;
-  --color-bg-white: #f3f4f6;
-
-  @include light-colors;
-
-  --color-accent: orange;
-}
-
-:root[data-theme="dark"] {
-  body {
-    @include dark-colors;
-  }
+:where(html) {
+  --o6gray-0: #f8f9fa;
+  --o6gray-1: #f1f3f5;
+  --o6gray-2: #e9ecef;
+  --o6gray-3: #dee2e6;
+  --o6gray-4: #ced4da;
+  --o6gray-5: #adb5bd;
+  --o6gray-6: #868e96;
+  --o6gray-7: #495057;
+  --o6gray-8: #343a40;
+  --o6gray-9: #212529;
+  --o6red-0: #fff5f5;
+  --o6red-1: #ffe3e3;
+  --o6red-2: #ffc9c9;
+  --o6red-3: #ffa8a8;
+  --o6red-4: #ff8787;
+  --o6red-5: #ff6b6b;
+  --o6red-6: #fa5252;
+  --o6red-7: #f03e3e;
+  --o6red-8: #e03131;
+  --o6red-9: #c92a2a;
 }
