--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -14,8 +14,8 @@ const { title, description, permalink, current } = Astro.props
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Piazzolla:wght@400..900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/assets/style/modern_reset.css">
-    <link rel="stylesheet" href="https://unpkg.com/open-props"/>
-    <link rel="stylesheet" href={Astro.resolve('../styles/global.scss')}>
+    <!-- <link rel="stylesheet" href="https://unpkg.com/open-props"/> -->
+    <link rel="stylesheet" type="text/css" href={Astro.resolve('../styles/global.scss')}>
     <script type="module" src={Astro.resolve('../js/index.js')} defer></script>
     <script src="/assets/js/ThemeToggle.js" defer></script>
 
