--- a/src/components/HeaderLogo.astro
+++ b/src/components/HeaderLogo.astro
@@ -92,6 +92,7 @@ brandLogo.addEventListener("click", (e) => {
         var(--animation-slide-out-right) forwards,
         var(--animation-fade-out) forwards;
       animation-duration: 1s;
+      // opacity: 0;
       color: blue;
 
       &.visible {
