fix: back to scss

--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -10,14 +10,13 @@ import ThemeToggle from "./ThemeToggle.astro";
   </div>
 
   <div class="header-right">
-    <Button theme="nav">Button nav</Button>
     <nav id="sitenav">
       <ul role="list">
         <li>
-          <a href="/apropos">Mes porjetc</a>
+          <a href="/philosophie">Ma philosophie</a>
         </li>
         <li>
-          <a href="/apropos">À propos</a>
+          <a href="/apropos">À propos de mézigue</a>
         </li>
       </ul>
     </nav>
