--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,17 +22,14 @@ let current = "index";
     </header>
 
     <PanelTitle>
-      <h1>Conception et fabrication de sites internet personnalisés</h1>
+      <h1 data-splitting>Je fabrique des sites internet pour vous.</h1>
       <h3>MADE IN MONTMARTRE (PARIS, FRANCE)</h3>
     </PanelTitle>
 
     <Panel position="right panel" title="intro">
       <div slot="content">
         <p class="teasing">
-          Les projets (numériques) prennent
-          tout leur sens lorsque leurs concepteurs comprennent comment ils seront
-          construits, et pourquoi. Tout comme un architecte comprend comment une
-          structure est créée, il devrait en être de même pour le web.
+          Les projets (numériques) prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
         </p>
       </div>
     </Panel>
