fix: themetoggle unknown words

--- a/src/layouts/default.astro
+++ b/src/layouts/default.astro
@@ -2,7 +2,7 @@
 const { title, description, permalink, current } = Astro.props
 ---
 <!doctype html>
-<html lang="fr" class="no-js">
+<html lang="fr" class="no-js" data-theme="light">
   <head>
     <!-- Global metadata -->
     <meta charset="utf-8" />
