fix: google's toggle

--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -53,3 +53,5 @@ import WorldIcon from "./svg/world.svg.astro";
   font-size: 18px;
 }
 </style>
+
+<script src="/assets/js/ThemeToggle.js"></script>
