--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -54,4 +54,4 @@ import WorldIcon from "./svg/world.svg.astro";
 }
 </style>
 
-<script src="/assets/js/ThemeToggle.js"></script>
+<!-- <script src="/assets/js/ThemeToggle.js"></script> -->
