--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,12 +3,4 @@
 @use "o6/theme-light";
 @use "o6/theme-dark";
 @use "o6/typography";
-
-.stacked {
-  display: grid;
-  grid: [stack] 1fr / [stack] 1fr;
-
-  & > * {
-    grid-area: stack;
-  }
-}
+@use "o6/utils";
