--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,15 +21,19 @@ let current = "index";
       <Header />
     </header>
 
-    <PanelTitle>
-      <h1 data-splitting>Je fabrique des sites internet pour vous.</h1>
-      <h3>MADE IN MONTMARTRE (PARIS, FRANCE)</h3>
+    <PanelTitle position="center">
+      <h1>Je fabrique et prends <strong>soin</strong> de vos sites internet</h1>
+      <h3>Personnalisées et faciles à utiliser</h3>
     </PanelTitle>
 
     <Panel position="right panel" title="intro">
       <div slot="content">
         <p class="teasing">
-          Les projets (numériques) prennent tout leur sens lorsque leurs concepteurs comprennent comment ils seront construits, et pourquoi. Tout comme un architecte comprend comment une structure est créée, il devrait en être de même pour le web.
+          Bonjour, moi c'est Olivier.
+
+          Je conçois et développe des sites internet.
+
+          De votre interface de gestion du site aux pages pour les visiteurs, je construis votre site autour de vos contenus (produits, œuvres, activités).
         </p>
       </div>
     </Panel>
@@ -37,15 +41,13 @@ let current = "index";
     <Panel position="left panel">
       <div slot="content">
         <Markdown>
-          ### Outils
+          ### *Outils*
 
           Vous aider et vous donner la possibilité de prendre soin de votre site.
 
-          Je conçois en gardant à l'&#x2019;esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
+          Je conçois en gardant à l'esprit la facilité d’utilisation, en m’efforçant de créer des projets accessibles à tous.
 
-          Chaque frappe de touche (Fig 3) est soigneusement étudiée car j’essaie d’écrire un code simple et résistant. L’amélioration progressive est la philosophie avec laquelle je cherche à travailler.
-
-          <Button theme="panel">Oh ouiii, je le veux ! &rarr; &#x21e2; &#x27f6;</Button>
+          <Button theme="panel">Oh ouiii, je le veux ! &#10095; &rarr; &#x21e2; &#x27f6;</Button>
           <Button>Button naked</Button>
         </Markdown>
       </div>
@@ -54,7 +56,7 @@ let current = "index";
     <PanelFull title="points">
       <div slot="content">
         <Markdown>
-          Il s'agit de s&#x2019;adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
+          Il s'agit de s'adapter aux personnes, de leur rendre la vie plus facile, du moins ne pas la compliquer. J’aime collaborer, donner des conseils et aider à repousser les limites pour construire des projets qui attirent l’attention, sans sacrifier la simplicité d’utilisation.
         </Markdown>
       </div>
       <div slot="content">
