--- a/src/styles/o6/_colors.scss
+++ b/src/styles/o6/_colors.scss
@@ -9,6 +9,7 @@
   --o6gray-7: #495057;
   --o6gray-8: #343a40;
   --o6gray-9: #212529;
+
   --o6red-0: #fff5f5;
   --o6red-1: #ffe3e3;
   --o6red-2: #ffc9c9;
@@ -19,4 +20,15 @@
   --o6red-7: #f03e3e;
   --o6red-8: #e03131;
   --o6red-9: #c92a2a;
+
+  --o6yellow-0: #ffffeb;
+  --o6yellow-1: #fffdae;
+  --o6yellow-2: #fefc71;
+  --o6yellow-3: #fefb48;
+  --o6yellow-4: #e9e632;
+  --o6yellow-5: #cecb21;
+  --o6yellow-6: #a2a001;
+  --o6yellow-7: #7a7801;
+  --o6yellow-8: #656401;
+  --o6yellow-9: #3d3c00;
 }
