--- a/src/styles/o6/_theme-light.scss
+++ b/src/styles/o6/_theme-light.scss
@@ -3,12 +3,12 @@
 
   --brand: var(--orange-6);
 
-  --link: var(--indigo-7);
-  --link-visited: var(--grape-7);
+  --link: var(--blue-7);
+  --link-visited: var(--blue-9);
 
-  --surface-1: var(--yellow-2);
-  --surface-1-hover: var(--yellow-3);
-  --surface-2: var(--o6gray-2);
+  --surface-1: var(--o6yellow-1);
+  --surface-1-hover: var(--o6yellow-5);
+  --surface-2: var(--gray-2);
   --surface-3: var(--gray-3);
   --surface-4: var(--gray-4);
 
