feat!: start all over, simplify

--- a/src/components/DefaultHeader.astro
+++ b/src/components/DefaultHeader.astro
@@ -1,11 +1,9 @@
 ---
-import Logo from "./HeaderLogo.astro";
-import Button from "./Button.astro";
 ---
 
 <div class="header-inner">
   <div class="header-left logo">
-    <Logo />
+    LOGO
   </div>
 
   <div class="header-right">
