fix: simplify some css

--- a/src/components/DefaultFooter.astro
+++ b/src/components/DefaultFooter.astro
@@ -4,6 +4,7 @@ import WorldIcon from "./svg/world.svg.astro";
 ---
 <div class="footer-inner">
   <div class="footer-left">
+    <p>Olivier Cardinaux</p>
     <div class="offline">
     <HomeIcon />
     <p>4 rue Chappe, 75018 Paris</p>
