--- a/src/styles/o6/_typography.scss
+++ b/src/styles/o6/_typography.scss
@@ -1,22 +1,31 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Piazzolla:wght@400..900&display=swap"); */
-
 :root {
-  --font-sans: bitter, system-ui, sans-serif;
+  --font-sans: "Encode Sans", system-ui, sans-serif;
   --font-cursive: piazzolla, cursive;
   --vw12: 8.333vw; /* 8.33vw is 1/12 de 100vw, bcz of 12 cols grid */
   --text-1: var(--gray-9);
+  --font-stretch: 100%;
 }
 
 body {
   font-family: var(--font-sans);
   line-height: var(--font-lineheight-2);
   font-size: 18px;
-  font-weight: var(--font-weight-4);
+  font-weight: var(--font-weight-3);
+  font-stretch: var(--font-stretch);
+  font-synthesis: none;
+}
+
+h1,
+h2,
+h3 {
+  line-height: var(--font-lineheight-1);
 }
 
 h1 {
+  --font-stretch: 75%;
+
   font-size: var(--font-size-fluid-3);
-  font-weight: var(--font-weight-9);
+  font-weight: var(--font-weight-6);
 }
 
 h2 {
@@ -26,7 +35,7 @@ h2 {
 
 h3 {
   font-size: var(--font-size-fluid-1);
-  font-weight: var(--font-weight-3);
+  font-weight: var(--font-weight-6);
 }
 
 h4 {
@@ -41,13 +50,25 @@ h4 {
 }
 
 .text-logo {
-  font-family: Piazzolla, serif;
-  font-weight: var(--font-weight-9);
+  font-weight: var(--font-weight-1);
   letter-spacing: var(--font-letterspacing-2);
+  font-stretch: 75%;
   color: var(--brand);
 }
 
-.article {
+article {
   font-weight: var(--font-weight-3);
-  font-size: var(--font-size-2);
+  font-size: var(--font-size-fluid-1);
+
+  * + * {
+    margin-top: var(--size-2);
+  }
+
+  strong {
+    font-weight: var(--font-weight-5);
+  }
+
+  em {
+    text-shadow: 0 0 15px var(--highlight-color);
+  }
 }
